# reversi-bot

./: .gitmodules  Cargo.toml  LICENSE_MIT  README.md  build_and_copy.sh
src/: calc_legal_places.rs  can_put.rs  constants.rs  decide_place.rs  enums.rs  evaluate.rs  evaluate_normal.rs  evaluate_perfect.rs  evaluate_point_table.rs  evaluate_win.rs  get_my_and_opponent_stones.rs  has_game_ended.rs  lib.rs  put.rs  search.rs  structs.rs  utils.rs
