[package]
name = "reversi-bot"
version = "0.1.0"
authors = ["Daichi Kato <daichi5967@docomo.ne.jp>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

# [features]
# default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"
rand = { version = "0.6.1", features = ["wasm-bindgen"] } # see: https://github.com/rust-random/rand/issues/616

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
opt-level = 3
